<resources>
    <string name="app_name">Pokebi</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="biodata">Data Pokemon</string>
    <string name="tinggi">Tinggi</string>
    <string name="berat">Berat</string>
    <string name="kelemahan">Kelemahan</string>
    <string name="kategori">Kategori</string>
    <string name="tipe">Tipe</string>
    <string name="kemampuan">Kemampuan</string>
    <string name="share">Share</string>
    <string-array name="data_name">
        <item>Pikachu</item>
        <item>Sandshrew</item>
        <item>Raticate</item>
        <item>Mega Blastoise</item>
        <item>Mega Alakazam</item>
        <item>Machop</item>
        <item>Tentacool</item>
        <item>Geodude</item>
        <item>Golem</item>
        <item>Ponyta</item>
        <item>Slowpoke</item>
        <item>Nidoran</item>
        <item>Clefairy</item>
        <item>Paras</item>
        <item>Diglett</item>
    </string-array>
</resources>